4. Closed #151 (https://github.com/SIMRacingApps/SIMRacingApps/issues/151)        CarNumber: Add ability for user to provide PNG file        Path: Documents/SIMRacingApps/CarNumbers/LeagueID-{leagueId}/{carNumber}.png

--- a/widgets/CarNumber/CarNumber.css
+++ b/widgets/CarNumber/CarNumber.css
@@ -5,6 +5,9 @@
     stroke-width:  15px;
 }
 
+.SIMRacingApps-Widgets-CarNumber-svg {
+    z-index: 1;
+}
 .SIMRacingApps-Widget-CarNumber-background {
     opacity:    .8;
 }
@@ -15,4 +18,16 @@
 
 .SIMRacingApps-Widget-CarNumber-slant-normal {
 
+}
+
+.SIMRacingApps-Widget-CarNumber-image {
+    position: absolute;
+    left: 0%;
+    top: 0%;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+    background-size:    contain;
+    background-repeat:  no-repeat;
+    background-position: center;
 }
